work on home page

--- a/src/SCSS/_style.scss
+++ b/src/SCSS/_style.scss
@@ -13,3 +13,26 @@
   font-family:arial;
   color:blue;
 }
+
+.titleSection{
+	height:300px;
+}
+
+.homeTitle{
+	
+	position:relative;
+	top:100px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 5rem
+}
+
+.homeContent{
+	background-color:blue;
+	height:300px;
+}
+
+.formContent{
+	background-color:red;
+	height:300px;
+}
