--- a/src/SCSS/_style.scss
+++ b/src/SCSS/_style.scss
@@ -77,3 +77,12 @@ POST PAGE
 .serviceImage{
 	height:50%;
 }
+
+/*------------------------------------
+POST
+------------------------------------*/
+
+.post{
+
+	background-color:white;
+}
