--- a/src/SCSS/_variables.scss
+++ b/src/SCSS/_variables.scss
@@ -8,3 +8,10 @@
 
 }
 $font-title: 'theboldfont', 'Trebuchet MS', Arial, sans-serif;
+
+/*-------------------------
+COLORS
+-------------------------*/
+
+$badgeInputBackground:#f0e1cb;
+$badgeInputBorderColor:#bc945c;
