--- a/src/SCSS/_style.scss
+++ b/src/SCSS/_style.scss
@@ -60,16 +60,18 @@ HOME PAGE
 
 .homeTitle{
 
-	font-family: $font-title;
-	font-size: 7vw;
-	position: absolute;
-	left: 17%;
-	top:100px;
+	    font-family: "theboldfont", "Trebuchet MS", Arial, sans-serif;
+    font-size: 8rem;
+    position: relative;
+    top: 99px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
  }
 
 .homeContainer{
 
-	max-width:1180px;
+	max-width:970px;
 	margin-left: auto;
 	margin-right:auto;
 }
@@ -117,11 +119,11 @@ HOME PAGE
     border-color: #bc945c;
     text-align: center;
     text-transform: uppercase;
-    font-size: 2.5vw
+    font-size: 2rem;
 }
 
 .badgeInput:placeholder-shown{
-	font-size:1vw;
+	font-size:1rem;
 }
 
 .orgInput{
@@ -135,7 +137,7 @@ HOME PAGE
     border-color: #5b5d6e;
     text-align: center;
     text-transform: uppercase;
-    font-size: 2vw
+    font-size: 2rem;
 
 }
 
@@ -151,7 +153,7 @@ HOME PAGE
     border-color: #5b5d6e;
     text-align: center;
     text-transform: uppercase;
-    font-size: 2vw
+    font-size: 2rem;
 }
 
 
@@ -287,6 +289,13 @@ MEDIA QUERIES
 	 .badgeButton{
 	 	font-size:3.5vw;
 	 }
+
+	 .homeTitle{
+
+
+    font-size: 7vw;
+   
+ 	}
 }
 
 
