--- a/src/SCSS/_style.scss
+++ b/src/SCSS/_style.scss
@@ -78,7 +78,11 @@ HOME PAGE
 	
 .homeContent{
 	
-	height:300px;
+		p{
+		margin-top: 41px;
+	    line-height: 28.5px;
+		}
+	
 }
 
 .formContent{
@@ -270,7 +274,7 @@ POST
 /*---------------------------
 MEDIA QUERIES
 ---------------------------*/
- @media screen and (max-width: 767px) {
+ @media screen and (max-width: 768px) {
 
 	.formContent{
 		padding-bottom:96%;
@@ -306,4 +310,20 @@ MEDIA QUERIES
  	}
 }
 
+/*-----------------------------
+REACT TRANSITIONS
+-------------------------------*/
 
+.fade-enter{
+	/*max-height:0px;*/
+	opacity:0;
+	overflow:hidden;
+}
+
+.fade-enter-active{
+
+	opacity:1;
+	transition: .75s ease-in all;
+	/*max-height:1000px;*/
+
+}
