replaced police hat with new image

--- a/src/SCSS/_style.scss
+++ b/src/SCSS/_style.scss
@@ -101,7 +101,7 @@ HOME PAGE
 .hat{
     position: absolute;
     left: 0;
-    top: 0;
+    top: 61px;
     width: 100%;
     height: auto;
     opacity: 1;
@@ -126,7 +126,7 @@ HOME PAGE
 .badgeInput{
 	position: absolute;
     top: 31%;
-    left: 36.5%;
+    left: 37.5%;
     width: 25%;
     height: 8%;
     text-align: center;
